bk_ida/gobmkida/c1/compute_escape_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_escape_influence/src/engine/influence.c:2009:19: error: use of undeclared identifier 'compute_escape_influence_escape_values'
if ( *( _DWORD *)&compute_escape_influence_escape_values[2 * v7][0] != v8 ) 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_escape_influence/src/engine/influence.c:2011:14: error: use of undeclared identifier 'compute_escape_influence_escape_values'
*( _DWORD *)&compute_escape_influence_escape_values[2 * v7][0] = v8; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_escape_influence/src/engine/influence.c:2018:13: error: use of undeclared identifier 'compute_escape_influence_active_caches'
*( _QWORD *)compute_escape_influence_active_caches = 0LL; 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_escape_influence/src/engine/influence.c:2020:6: error: use of undeclared identifier 'compute_escape_influence_active_caches'
if ( compute_escape_influence_active_caches[v9] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_escape_influence/src/engine/influence.c:2025:19: error: use of undeclared identifier 'compute_escape_influence_escape_values'
escape_value[i] = compute_escape_influence_escape_values[i][v9]; 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_escape_influence/src/engine/influence.c:2058:1: error: use of undeclared identifier 'compute_escape_influence_escape_values'
compute_escape_influence_escape_values[k][v9] = escape_value[k]; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_escape_influence/src/engine/influence.c:2060:1: error: use of undeclared identifier 'compute_escape_influence_active_caches'
compute_escape_influence_active_caches[v9] = 1; 
^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_escape_influence/src/obj/1/influence.o] Error 1
